<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoneyTime</string>
    <string name="action_settings">Settings</string>
    <string name="shoppingdate">消費日期</string>
    <string name="Category">類別</string>
    <string name="ChildCategory">子類別</string>
    <string name="cost">金額</string>
    <string name="Note">備註</string>
    <string name="PayMethod">消費方式</string>
    <string name="Income">收入</string>
    <string name="Outrun">支出</string>
    <string name="Save">儲存囉!</string>
    <string name="qrfind">掃描發票</string>
    <string name="receipt">電子發票</string>
    <string name="gas">設置油價提醒</string>
    <string name="write">設置記帳提醒</string>
    <string name="pricetype">獎別</string>
    <string name="pricenumber">中獎號碼</string>
    <string name="supertext">特別獎</string>
    <string name="spetext">特獎</string>
    <string name="firsttext">頭獎</string>
    <string name="sixtext">增開六獎</string>
    <string name="googlesync">備份於Google</string>
    <string name="export">匯出帳務資料</string>
    <string name="im_port">匯入帳務資料</string>
    <string name="ubike">u Bike</string>
    <string name="sync">同步</string>
    <string name="cellphone">手機號碼</string>
    <string name="checknum">驗證碼</string>
    <string name="imgnum">圖形碼</string>
    <string name="login">登入</string>
    <string name="choosereceipt">發票期別</string>
    <string name="search">查詢</string>
    <string name="showreport">顯示報表</string>
    <string name="receiptnum">發票號碼</string>
    <string name="sign">我要註冊!</string>
    <string name="logout">登出</string>
    

</resources>
