<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/remindgas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_gas"
        android:text="@string/gas"
        android:textSize="24sp" />

    <Button
        android:id="@+id/remindwrite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_pen"
        android:text="@string/write"
        android:textSize="24sp" />
    
    <Button
        android:id="@+id/googlesync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_googledrive"
        android:text="@string/googlesync"
        android:textSize="24sp" />
    
    <Button
        android:id="@+id/export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_export"
        android:text="@string/export"
        android:textSize="24sp" />
    
    <Button
        android:id="@+id/im_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_im_port"
        android:text="@string/im_port"
        android:textSize="24sp" />

     <Button
        android:id="@+id/ubike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_ubike"
        android:text="@string/ubike"
        android:textSize="24sp" />

</LinearLayout>
