<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/calendar" />

    <TextView
        android:id="@+id/dateview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/datesub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/imageView1"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrowleft" />

    <ImageButton
        android:id="@+id/dateadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView1"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrowright" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/datesub" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/listtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Category"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ems="10" >

                <requestFocus />
            </EditText>

            <ImageButton
                android:id="@+id/CategoryPlus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/ic_plus" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/receipt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ChildCategory"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ems="10" />

            <ImageButton
                android:id="@+id/ImageButton01"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/ic_plus" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/receipt_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Note"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ems="10" />

            <ImageButton
                android:id="@+id/ImageButton02"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/ic_plus" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cost"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        

       	<RadioGroup 
       	    android:id="@+id/rdg1"
       	    android:gravity="right"
       		android:orientation="horizontal"
       		android:layout_width="fill_parent"
       		android:layout_height="fill_parent">
            
        		<RadioButton 
        		    android:id="@+id/rdo1"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
					android:layout_marginRight="14dp"
               	 	android:text="@string/Income" />
        		
        		<RadioButton 
        		    android:id="@+id/rdo2"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
					android:layout_marginRight="18dp"
                	android:text="@string/Outrun"
                	android:checked="true" />
		</RadioGroup>
           
    </TableLayout>

    <Button
        android:id="@+id/savebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:drawableRight="@drawable/ic_save"
        android:text="@string/Save" 
        android:textSize="24sp"/>

    <Button
        android:id="@+id/qrbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/savebutton"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@drawable/ic_qr"
        android:text="@string/qrfind" />

    <Button
        android:id="@+id/accountbuttonn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/savebutton"
        android:layout_alignParentRight="true"
        android:text="Button" />

</RelativeLayout>